force-app/main/default/objects/Quote2__c/Quote2__c.object-meta.xml
<CustomObject>
    <description>Quote is a bundle of different products with Policy Options and Product Coverages, customized specifically for each opportunity. This object will only be associated with Business companies. There can be multiple quotes associated with the opportunity, to track multiple quotes, there will be a status field which will have options like Draft, Activated, Rejected and only one quote can have ‘activated’ status under one opportunity.</description>
    <label>Quote</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>