force-app/main/default/objects/Quote2__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <label>Proposal Date</label>
    <type>Date</type>
</CustomField>