force-app/main/default/objects/Quote2__c/fields/Aggregate_Limit_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit_of_Liability__c</fullName>
    <label>Aggregate Limit of Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>