force-app/main/default/objects/Quote2__c/fields/Authorized_Premium__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Premium__c</fullName>
    <inlineHelpText>Authorized Premium of the quote</inlineHelpText>
    <label>Authorized Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>