force-app/main/default/objects/Quote2__c/fields/Brokerage_Account__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>brokerage firm who is managing the quote</inlineHelpText>
    <label>Brokerage</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Brokerage value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Brokerage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>