force-app/main/default/objects/Quote2__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Choose Quote category (New or Renewal)</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Quote</fullName>
            </value>
            <value>
                <fullName>Renewal Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>