force-app/main/default/objects/Quote2__c/fields/Conga_Template__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>