force-app/main/default/objects/Quote2__c/fields/Delayed_Start_Up__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Start_Up__c</fullName>
    <label>Delayed Start-Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>