force-app/main/default/objects/Quote2__c/fields/Description_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Project__c</fullName>
    <label>Quote Description</label>
    <type>TextArea</type>
</CustomField>