force-app/main/default/objects/Quote2__c/fields/Estimated_Project_value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_value__c</fullName>
    <inlineHelpText>Estimated Project Value of the quote</inlineHelpText>
    <label>Estimated Project value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>