force-app/main/default/objects/Quote2__c/fields/Existing_Structure__c.field-meta.xml
<CustomField>
    <fullName>Existing_Structure__c</fullName>
    <label>Existing Structure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>