force-app/main/default/objects/Quote2__c/fields/Firm_Policy_Term__c.field-meta.xml
<CustomField>
    <fullName>Firm_Policy_Term__c</fullName>
    <formula>IF(
(  Quote_Effective_Date__c - TODAY()) / 365 * 12 &lt; 1, 1, ((Quote_Effective_Date__c - TODAY()) / 365 * 12) - 12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Policy Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>