force-app/main/default/objects/Quote2__c/fields/Hard_Costs__c.field-meta.xml
<CustomField>
    <fullName>Hard_Costs__c</fullName>
    <label>Hard Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>