force-app/main/default/objects/Quote2__c/fields/Is_Renewable__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewable__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Checked if quote is renewable</inlineHelpText>
    <label>Is Renewable</label>
    <type>Checkbox</type>
</CustomField>