force-app/main/default/objects/Quote2__c/fields/Master_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Policy_Number__c</fullName>
    <inlineHelpText>Unique identifer of master policy</inlineHelpText>
    <label>Master Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>