force-app/main/default/objects/Quote2__c/fields/Name_insured_billing_address__c.field-meta.xml
<CustomField>
    <fullName>Name_insured_billing_address__c</fullName>
    <formula>Account__r.BillingStreet&amp;&quot;, &quot; &amp;
Account__r.BillingCity &amp; &quot;, &quot; &amp;
Account__r.BillingState &amp; &quot;, &quot; &amp;
Account__r.BillingPostalCode &amp; Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name insured billing address</label>
    <type>Text</type>
</CustomField>