force-app/main/default/objects/Quote2__c/fields/Name_Insured_Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Name_Insured_Estimated_Revenue__c</fullName>
    <formula>Account__r.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Insured Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>