force-app/main/default/objects/Quote2__c/fields/Name_Insured_IBC_Code__c.field-meta.xml
<CustomField>
    <fullName>Name_Insured_IBC_Code__c</fullName>
    <formula>Account__r.IBC_Code__r.IBC_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Insured IBC Code</label>
    <type>Text</type>
</CustomField>