force-app/main/default/objects/Quote2__c/fields/Next_Related_LI__c.field-meta.xml
<CustomField>
    <fullName>Next_Related_LI__c</fullName>
    <label>Next Related LI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insurer</fullName>
            </value>
            <value>
                <fullName>Extended Reporting Period</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>