force-app/main/default/objects/Quote2__c/fields/Parent_Quote__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>New Quote of Renewal Quote</inlineHelpText>
    <label>Parent Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote2__c.Opportunity__r.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipLabel>Renewal Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>