force-app/main/default/objects/Quote2__c/fields/Pending_and_Prior_Litigation_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_and_Prior_Litigation_Date__c</fullName>
    <inlineHelpText>Pending and prior litigation date of a quote</inlineHelpText>
    <label>Pending and Prior Litigation Date</label>
    <type>Date</type>
</CustomField>