force-app/main/default/objects/Quote2__c/fields/Policy_Created__c.field-meta.xml
<CustomField>
    <fullName>Policy_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is hidden and will be used in flow</inlineHelpText>
    <label>Policy Created</label>
    <type>Checkbox</type>
</CustomField>