force-app/main/default/objects/Quote2__c/fields/Policy_Index_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Index_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Policy Index Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>