force-app/main/default/objects/Quote2__c/fields/Policy_Premium__c.field-meta.xml
<CustomField>
    <fullName>Policy_Premium__c</fullName>
    <inlineHelpText>Build Recipes
Build Recipes
100%
10

Policy Premium of a quote
Screen reader support enabled.
 
 
 		

Policy Premium of a quote</inlineHelpText>
    <label>Policy Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>