force-app/main/default/objects/Quote2__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a hidden field and will be using it in a flow</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>