force-app/main/default/objects/Quote2__c/fields/Product_Option_Copied__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_Copied__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>this is a hidden field and will be using in a flow</inlineHelpText>
    <label>Product Option Copied</label>
    <type>Checkbox</type>
</CustomField>