force-app/main/default/objects/Quote2__c/fields/Program_Audience_IBC_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Audience_IBC_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Audience/ IBC Code</label>
    <referenceTo>Program_Audience__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>