force-app/main/default/objects/Quote2__c/fields/Project_Descrtiption__c.field-meta.xml
<CustomField>
    <fullName>Project_Descrtiption__c</fullName>
    <label>Project Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>