force-app/main/default/objects/Quote2__c/fields/PWE_Copied__c.field-meta.xml
<CustomField>
    <fullName>PWE_Copied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PWE_Copied</label>
    <type>Checkbox</type>
</CustomField>