force-app/main/default/objects/Quote2__c/fields/Quote_button_2__c.field-meta.xml
<CustomField>
    <fullName>Quote_button_2__c</fullName>
    <description>##Conga created button:00bf0000000sIGT</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a0xf000000XVPgrAAH&quot; + 

&quot;&amp;QMode=SalesforceFile&quot; +

&quot;&amp;SC0=1&quot; +

&quot;&amp;SC1=SalesforceFile&quot;</formula>
    <label>Quote button 2</label>
    <type>Text</type>
</CustomField>