force-app/main/default/objects/Quote2__c/fields/Quote_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Effective_Date__c</fullName>
    <inlineHelpText>Effective date of the quote</inlineHelpText>
    <label>Policy Effective Date</label>
    <type>Date</type>
</CustomField>