force-app/main/default/objects/Quote2__c/fields/Quote_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiry_Date__c</fullName>
    <inlineHelpText>Expiry date of the quote</inlineHelpText>
    <label>Quote Expiry Date</label>
    <type>DateTime</type>
</CustomField>