force-app/main/default/objects/Quote2__c/fields/Quote_Term__c.field-meta.xml
<CustomField>
    <fullName>Quote_Term__c</fullName>
    <inlineHelpText>No of months the quote will be effective</inlineHelpText>
    <label>Policy Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>