force-app/main/default/objects/Quote2__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Crime Bond</fullName>
            </value>
            <value>
                <fullName>Commercial General Liability</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Commercial Surety</fullName>
            </value>
            <value>
                <fullName>Contingent Liability</fullName>
            </value>
            <value>
                <fullName>Contractor Pollution Liability</fullName>
            </value>
            <value>
                <fullName>Contract Surety</fullName>
            </value>
            <value>
                <fullName>Course-of-Construction</fullName>
            </value>
            <value>
                <fullName>Cyber Liability</fullName>
            </value>
            <value>
                <fullName>Employment Practice Liability</fullName>
            </value>
            <value>
                <fullName>Environmental Impairment Liability</fullName>
            </value>
            <value>
                <fullName>Errors &amp; Omission Liability</fullName>
            </value>
            <value>
                <fullName>Fiduciary Liability</fullName>
            </value>
            <value>
                <fullName>Financial Institution Bond</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Liability</fullName>
            </value>
            <value>
                <fullName>Representation and Warranties</fullName>
            </value>
            <value>
                <fullName>Tax Indemnity</fullName>
            </value>
            <value>
                <fullName>Wrap-Up Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>