force-app/main/default/objects/Quote2__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <inlineHelpText>Renewal date of a quote</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>