force-app/main/default/objects/Quote2__c/fields/Renewal_Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Policy_Id__c</fullName>
    <formula>Opportunity__r.Policy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Policy Id</label>
    <type>Text</type>
</CustomField>