force-app/main/default/objects/Quote2__c/fields/Send_Quote_to_Broker__c.field-meta.xml
<CustomField>
    <fullName>Send_Quote_to_Broker__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; +  Conga_Template__r.Id +
&quot;&amp;csvisible=1&quot; +
&quot;&amp;CSRecipient1=&quot; + Broker__r.Id +
 
&quot;&amp;qmode=congasign&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Quote to Broker</label>
    <type>Text</type>
</CustomField>