force-app/main/default/objects/Quote2__c/fields/test_trigger_quote__c.field-meta.xml
<CustomField>
    <fullName>test_trigger_quote__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; +  Conga_Template__r.Id  +
&quot;&amp;queryid=a0pf0000003XPQxAAO,a0pf0000003XMDlAAO,a0pf0000003T6juAAC,a0pf0000003TOkcAAG,a0pf0000003THeAAAW,a0pf0000003T5d9AAC,a0pf0000003ZfheAAC&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=&quot; +  Name  +
&quot;&amp;SC0=1&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test trigger quote</label>
    <type>Text</type>
</CustomField>