force-app/main/default/objects/Quote2__c/fields/Total_Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Payable__c</fullName>
    <formula>Policy_Premium__c +  Transaction_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>