force-app/main/default/objects/Quote2__c/fields/Total_Layer_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Layer_Premium__c</fullName>
    <label>Total Layer Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>