force-app/main/default/objects/Quote2__c/fields/Transaction_Fees__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fees__c</fullName>
    <label>Transaction Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>