force-app/main/default/objects/Quote2__c/fields/Underwriter_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_s_Notes__c</fullName>
    <label>Underwriter&apos;s Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>