force-app/main/default/objects/Quote2__c/fields/Underwriting_Practice__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Practice__c</fullName>
    <formula>TEXT(Product__r.Underwriting_Practive__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Underwriting_Practice</label>
    <type>Text</type>
</CustomField>