force-app/main/default/objects/Quote2__c/recordTypes/Master_Policy.recordType-meta.xml
<RecordType>
    <fullName>Master_Policy</fullName>
    <active>true</active>
    <description>This will be used to track program deals which include Sponsored Program and Open Market Program.</description>
    <label>Master Policy</label>
</RecordType>