force-app/main/default/objects/Quote2__c/recordTypes/Non_Program_Quote.recordType-meta.xml
<RecordType>
    <fullName>Non_Program_Quote</fullName>
    <active>true</active>
    <description>This will be used to track non-program deals. It will be utilized as the Quote to present to corporations, once they agree on a quote, the status will be changed to Activated</description>
    <label>Non-Program Quote</label>
</RecordType>