force-app/main/default/objects/Quote2__c/validationRules/If_Quote_is_Active_and_Renewable_is_Not.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Quote_is_Active_and_Renewable_is_Not</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL( Status__c ,&apos;Activated&apos;) , Is_Renewable__c = TRUE,  ISBLANK( Renewal_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Is_Renewable__c</errorDisplayField>
    <errorMessage>Please check the Is Renewable field to True to activate this quote</errorMessage>
</ValidationRule>