force-app/main/default/objects/Quote2__c/validationRules/If_Renewable_is_False.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Renewable_is_False</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Is_Renewable__c = FALSE , NOT( ISBLANK( Renewal_Date__c ) ) )</errorConditionFormula>
    <errorDisplayField>Renewal_Date__c</errorDisplayField>
    <errorMessage>Please check the &quot;Is Renewable&quot; Checkbox to true.</errorMessage>
</ValidationRule>