force-app/main/default/objects/Quote2__c/validationRules/If_Renewable_is_NotChecked.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Renewable_is_NotChecked</fullName>
    <active>false</active>
    <description>if is renewable is not checked then renewal date should be null</description>
    <errorConditionFormula>AND( Is_Renewable__c =TRUE,  ISBLANK( Renewal_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Renewal_Date__c</errorDisplayField>
    <errorMessage>Please enter a Renewal Date</errorMessage>
</ValidationRule>