force-app/main/default/objects/Quote2__c/validationRules/Is_Renewable_False_When_Status_is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Renewable_False_When_Status_is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL( Status__c ,&apos;Activated&apos;) , Is_Renewable__c = FALSE,  NOT(ISBLANK( Renewal_Date__c )))</errorConditionFormula>
    <errorDisplayField>Is_Renewable__c</errorDisplayField>
    <errorMessage>Please check the Is Renewable checkbox to true</errorMessage>
</ValidationRule>