force-app/main/default/objects/Quote2__c/validationRules/New_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Category</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Category__c , &quot;New Quote&quot;), NOT(  ISBLANK(Parent_Quote__c ) )   )</errorConditionFormula>
    <errorDisplayField>Parent_Quote__c</errorDisplayField>
    <errorMessage>Parent Quote  should be empty</errorMessage>
</ValidationRule>