force-app/main/default/objects/Quote2__c/validationRules/Policy_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Policy_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Activated&apos;) &amp;&amp;  ISBLANK( Master_Policy_Number__c ) &amp;&amp; RecordType.Name =&apos;Master Poliy&apos;</errorConditionFormula>
    <errorDisplayField>Master_Policy_Number__c</errorDisplayField>
    <errorMessage>Enter Master Policy Number for active Quote.</errorMessage>
</ValidationRule>