force-app/main/default/objects/Quote2__c/validationRules/Quote_Account_Name_must_be_equal_to_Oppo.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Account_Name_must_be_equal_to_Oppo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!ISBLANK(Opportunity__c),
Account__c &lt;&gt;  Opportunity__r.AccountId
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Quote Account must be same as Opportunity&apos;s Account.</errorMessage>
</ValidationRule>