force-app/main/default/objects/Quote2__c/validationRules/Quote_Product_must_be_same_to_Opps_Pro.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Product_must_be_same_to_Opps_Pro</fullName>
    <active>false</active>
    <description>Quote Product must be same to Opp</description>
    <errorConditionFormula>AND(
!ISBLANK(Opportunity__c),
 Product__c  &lt;&gt; Opportunity__r.Product__c
)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Quote Product must be same to Opportunity Product.</errorMessage>
</ValidationRule>