force-app/main/default/objects/Quote2__c/validationRules/Quote_Status_activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Status_activated</fullName>
    <active>false</active>
    <description>if quote status is activated then effective date, expiry date,quote term should not be equal null.</description>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Activated&quot;) , ISNULL( Quote_Effective_Date__c ),  ISNULL( Quote_Expiry_Date__c ), ISNULL( Quote_Term__c )   )</errorConditionFormula>
    <errorMessage>Quote Effective Date, Quote Expiry Date &amp; Quote Term cannot be empty.</errorMessage>
</ValidationRule>