force-app/main/default/objects/Quote2__c/validationRules/Renewal_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Category</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Category__c , &quot;Renewal Quote&quot;) , ISBLANK( Parent_Quote__c ) )</errorConditionFormula>
    <errorDisplayField>Parent_Quote__c</errorDisplayField>
    <errorMessage>Parent Quote field cannot be empty.</errorMessage>
</ValidationRule>