force-app/main/default/objects/Quote2__c/validationRules/Renewal_Date_Population.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Date_Population</fullName>
    <active>true</active>
    <description>Whenever Status is changed to Activated, Renewal Date should also be Populated</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Activated&apos;) &amp;&amp;
 ISNULL(Renewal_Date__c) &amp;&amp;
 RecordType.Name = &apos;Master_Policy&apos;</errorConditionFormula>
    <errorDisplayField>Renewal_Date__c</errorDisplayField>
    <errorMessage>Quote Status is Activated, Kindly populate Renewal Date.</errorMessage>
</ValidationRule>