force-app/main/default/objects/Quote2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Brokerage_Account__c</columns>
    <columns>Broker__c</columns>
    <columns>Product__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>